k8s/namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  nextstep-dev
  labels:
    env:  dev
---
apiVersion: v1
kind: Namespace
metadata:
  name:  nextstep-staging
  labels:
    env:  staging
