k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-rails
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - nxtstep-api.pimentagroup.de
    secretName: app-tls
  rules:
  - host: nxtstep-api.pimentagroup.de
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-rails
          servicePort: 3003
